# Real-Time_Multi-Object_Tracking_and_Analytics_System_with_CPP-OpenCV

./: README.md
opencv-tracking-system/: CMakeLists.txt
opencv-tracking-system/include/: Detector.h  FrameProcessor.h  Tracker.h  VideoCapture.h
opencv-tracking-system/src/: Detector.cpp  FrameProcessor.cpp  Tracker.cpp  VideoCapture.cpp  main.cpp
